@@ -30,17 +30,18 @@ Q: What versions of OpenFlow does Open vSwitch support?
     A: The following table lists the versions of OpenFlow supported by each
     version of Open vSwitch:
 
-    =============== ===== ===== ===== ===== ===== =====
-    Open vSwitch    OF1.0 OF1.1 OF1.2 OF1.3 OF1.4 OF1.5
-    =============== ===== ===== ===== ===== ===== =====
-    1.9 and earlier  yes   ---   ---   ---   ---   ---
-    1.10, 1.11       yes   ---   (*)   (*)   ---   ---
-    2.0, 2.1         yes   (*)   (*)   (*)   ---   ---
-    2.2              yes   (*)   (*)   (*)   (%)   (*)
-    2.3, 2.4         yes   yes   yes   yes   (*)   (*)
-    2.5, 2.6, 2.7    yes   yes   yes   yes   (*)   (*)
-    2.8              yes   yes   yes   yes   yes   (*)
-    =============== ===== ===== ===== ===== ===== =====
+    ===================== ===== ===== ===== ===== ===== =====
+    Open vSwitch          OF1.0 OF1.1 OF1.2 OF1.3 OF1.4 OF1.5
+    ===================== ===== ===== ===== ===== ===== =====
+    1.9 and earlier        yes   ---   ---   ---   ---   ---
+    1.10, 1.11             yes   ---   (*)   (*)   ---   ---
+    2.0, 2.1               yes   (*)   (*)   (*)   ---   ---
+    2.2                    yes   (*)   (*)   (*)   (%)   (*)
+    2.3, 2.4               yes   yes   yes   yes   (*)   (*)
+    2.5, 2.6, 2.7          yes   yes   yes   yes   (*)   (*)
+    2.8, 2.9, 2.10, 2.11   yes   yes   yes   yes   yes   (*)
+    2.12                   yes   yes   yes   yes   yes   yes
+    ===================== ===== ===== ===== ===== ===== =====
 
     --- Not supported.
     yes Supported and enabled by default
@@ -73,8 +74,6 @@ Q: What versions of OpenFlow does Open vSwitch support?
     could cause crashes.  We don't recommend enabling it.)
 
     :doc:`/topics/openflow` tracks support for OpenFlow 1.1 and later features.
-    When support for OpenFlow 1.5 is solidly implemented, Open vSwitch will
-    enable it by default.
 
 Q: Does Open vSwitch support MPLS?
 
@@ -476,7 +475,7 @@ Q: How does OVS divide flows among buckets in an OpenFlow "select" group?
     different hash function, using a Netronome extension to the OpenFlow 1.5+
     group_mod message.  For more information, see
     Documentation/group-selection-method-property.txt in the Open vSwitch
-    source tree.  (OpenFlow 1.5 support in Open vSwitch is still experimental.)
+    source tree.
 
 Q: An OpenFlow "select" group isn't dividing packets evenly among the buckets.
 
